# handlers/register.go
@@ -70,6 +70,11 @@ func Register(mainRouter *mux.Router, cfg *config.Config, kSvc services.KafkaSer
 	appRouter.HandleFunc("/delta/pscs/delete", NewDeltaHandler(kSvc, h, chv, cfg, false, true, cfg.PscDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("psc-delta-delete")
 	appRouter.HandleFunc("/delta/filing-history", NewDeltaHandler(kSvc, h, chv, cfg, false, false, cfg.FilingHistoryDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("filing-history-delta")
 	appRouter.HandleFunc("/delta/filing-history/validate", NewDeltaHandler(kSvc, h, chv, cfg, true, false, cfg.FilingHistoryDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("filing-history-delta-validate")
+	appRouter.HandleFunc("/delta/document-store", NewDeltaHandler(kSvc, h, chv, cfg, false, false, cfg.DocumentStoreDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("document-store-delta")
+	appRouter.HandleFunc("/delta/document-store/validate", NewDeltaHandler(kSvc, h, chv, cfg, true, false, cfg.DocumentStoreDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("document-store-delta-validate")
+	appRouter.HandleFunc("/delta/registers", NewDeltaHandler(kSvc, h, chv, cfg, false, false, cfg.RegistersDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("registers-delta")
+	appRouter.HandleFunc("/delta/registers/delete", NewDeltaHandler(kSvc, h, chv, cfg, true, false, cfg.RegistersDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("registers-delta-delete")
+	appRouter.HandleFunc("/delta/registers/validate", NewDeltaHandler(kSvc, h, chv, cfg, true, false, cfg.RegistersDeltaTopic).ServeHTTP).Methods(http.MethodPost).Name("registers-delta-validate")
 	appRouter.Use(userAuthInterceptor.UserAuthenticationIntercept)
 	return nil
 }
